--- a/index.html
+++ b/index.html
@@ -4,120 +4,81 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XV Años</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f0f0f0;
-      color: #0a192f;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
-    section {
-      padding: 50px;
+    body {
+      background-color: #f8f9fa;
+      color: #333;
       text-align: center;
     }
 
-    /* Fondos con degradado y brillo */
-    @keyframes brillo {
-      0% { background-position: -100%; }
-      50% { background-position: 100%; }
-      100% { background-position: -100%; }
-    }
-
-    .portada, .presentacion, .carrusel {
-      position: relative;
-      overflow: hidden;
-      color: white;
+    section {
+      padding: 60px 20px;
     }
 
     .portada {
-      background: linear-gradient(rgba(10, 25, 47, 0.7), rgba(192, 192, 192, 0.5)), url('images/09-09-2021_lionel_messi_festeja_el_primer-1.png') center/cover no-repeat;
-      height: 50vh; /* Ocupa toda la pantalla */
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/09-09-2021_lionel_messi_festeja_el_primer-1.png') center/cover;
+      color: white;
       display: flex;
       align-items: center;
       justify-content: center;
+      height: 60vh;
+      font-size: 2rem;
+      font-weight: 600;
     }
 
-    .portada::before, .presentacion::before, .carrusel::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -150%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(120deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.1));
-      transform: skewX(-30deg);
-      animation: brillo 5s infinite;
-    }
-
-    /* Presentación personal */
     .presentacion {
-      background: linear-gradient(rgba(192, 192, 192, 0.6), rgba(255, 255, 255, 0.8));
-      color: #0a192f;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 40px;
+      margin: 20px auto;
+      max-width: 600px;
     }
 
-    /* Carrusel de fotos */
     .carrusel {
-      background: #0a192f;
-    }
-
-    .carrusel-container {
-        position: relative;
-        max-width: 600px;
-        margin: auto;
-        height: 400px;
+      position: relative;
+      max-width: 600px;
+      margin: auto;
     }
 
     .carrusel img {
-        width: 100%;
-      height: 100%;
-      object-fit: cover;
+      width: 100%;
       border-radius: 10px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transition: opacity 0.5s ease-in-out;
+      display: none;
     }
 
     .carrusel img.active {
-      opacity: 1;
+      display: block;
     }
 
     .btn {
-      background-color: #192734;
+      background: #007bff;
       color: white;
-      padding: 10px;
-      margin: 10px;
+      padding: 10px 20px;
       border: none;
-      cursor: pointer;
       border-radius: 5px;
+      cursor: pointer;
+      margin: 10px;
+      transition: 0.3s;
     }
 
+    .btn:hover {
+      background: #0056b3;
+    }
 
-    /* Lista de reproducción de YouTube */
     iframe {
       width: 80%;
       height: 315px;
-      border: none;
-      margin: 20px 0;
-    }
-
-    /* Trivia */
-    .trivia button {
-      padding: 10px 20px;
-      margin: 10px;
-      background-color: #0a192f;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* WhatsApp */
-    .whatsapp {
-      margin: 30px 0;
+      border-radius: 10px;
+      margin-top: 20px;
     }
 
     .whatsapp a {
@@ -127,63 +88,47 @@
       border-radius: 50px;
       text-decoration: none;
       font-size: 18px;
-    }
-
-    /* Mapa */
-    .mapa iframe {
-      width: 80%;
-      height: 400px;
-      border: 0;
+      display: inline-block;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <!-- Portada -->
   <section class="portada">
     <h1>Gracias por compartir mis XV</h1>
   </section>
 
-  <!-- Presentación Personal -->
   <section class="presentacion">
     <h2>Sobre mí</h2>
     <p>Hola, soy Bianca, y soy de Newell´s. Me encanta la música, bailar y pasar tiempo con mis amigos. ¡Gracias por ser parte de este momento tan especial!</p>
   </section>
 
-  <!-- Carrusel de Fotos -->
   <section class="carrusel">
     <h2>Mis mejores momentos</h2>
-    <div class="carrusel-container">
-        <img src="images/18-12-2022_argentina_se_consagro_campeon_del-3-e1671453428660.png" class="active" alt="Foto 1">
-        <img src="images/19c55cfbde6d66cd35e8c7c9c017c684d3526d82.jpg" alt="Foto 2">
-        <img src="images/419ab9b07b004b9cbae919d29f61e43e.jpg" alt="Foto 3">
-    </div>    
+    <div>
+      <img src="images/18-12-2022_argentina_se_consagro_campeon_del-3-e1671453428660.png" class="active" alt="Foto 1">
+      <img src="images/19c55cfbde6d66cd35e8c7c9c017c684d3526d82.jpg" alt="Foto 2">
+      <img src="images/419ab9b07b004b9cbae919d29f61e43e.jpg" alt="Foto 3">
+    </div>
     <button class="btn" onclick="cambiarImagen(-1)">Anterior</button>
     <button class="btn" onclick="cambiarImagen(1)">Siguiente</button>
   </section>
 
-  <!-- Lista de Reproducción de YouTube -->
   <section>
     <h2>Mis canciones favoritas</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/n3Rgc9Hq-_E?si=AZDNUcZZm_VKGxuX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
-    <!-- Trivia -->
-  <section class="trivia">
-    <h2>¿Cuánto me conocés?</h2>
-    <p>¿Cuál es mi color favorito?</p>
-    <button onclick="alert('¡Correcto!')">Azul</button>
-    <button onclick="alert('¡Intentalo de nuevo!')">Rosa</button>
-    <button onclick="alert('¡Intentalo de nuevo!')">Verde</button>
+    <iframe src="https://www.youtube.com/embed/n3Rgc9Hq-_E" allowfullscreen></iframe>
   </section>
 
-  <!-- WhatsApp -->
   <section class="whatsapp">
-    <h2>Enviame las fotos que sacaste en el cumple!</h2>
+    <h2>¡Envíame las fotos que sacaste en el cumple!</h2>
     <a href="https://wa.me/3416801035" target="_blank">Enviar por WhatsApp</a>
   </section>
 
   <!-- Mapa de Google -->
   <section class="mapa">
     <h2>¿Dónde es la fiesta?</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.9396468707096!2d-60.678239923676095!3d-32.92619277085702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6535610684737%3A0xcaca77d5acee3bd5!2sBis%20EVENTOS!5e0!3m2!1ses-419!2sar!4v1740458744681!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </section>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.9396468707096!2d-60.678239923676095!3d-32.92619277085702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b6535610684737%3A0xcaca77d5acee3bd5!2sBis%20EVENTOS!5e0!3m2!1ses-419!2sar!4v1740458744681!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+  </section>
 
   <script>
     let indice = 0;
